--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PaulBreon</title>
+    <title> WS Facture </title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
-<nav>
-    
-</nav>
+
 <body>
-    <p>Ceci est la page de Paul</p>
+    <header class="header">
+        <h1>Facture</h1>
+        <p>Bienvenue chez Nous.</p>
+    </header>
+
+    <nav>
+        <a href="https://www.cesi.fr">LinkA</a>
+        <a href="https://www.google.fr">LinkB</a>
+        <a href="https://www.google.fr">LinkC</a>
+    </nav>
+    <div>
+        
+    </div>
 </body>
+
 </html>
