--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     </header>
 
     <nav>
-        <a href="https://www.cesi.fr">LinkA</a>
-        <a href="https://www.google.fr">LinkB</a>
-        <a href="https://www.google.fr">LinkC</a>
+        <a href="">Mon CV</a>
     </nav>
     <div>
-        
+
     </div>
 </body>
 
