--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <nav>
-        <a href="">Mon CV</a>
+        <a href="https://github.com/PoloBrn/portfolio/raw/main/CV%20Paul%20Br%C3%A9on.pdf">Mon CV</a>
     </nav>
     <div>
 
