--- a/index.html
+++ b/index.html
@@ -8,15 +8,30 @@
 
 <body>
     <header class="header">
-        <h1>Facture</h1>
-        <p>Bienvenue chez Nous.</p>
+        <div class="Titre">
+            <h1>Paul Bréon</h1>
+            <p>Bienvenue dans ce site internet créer par mes soins</p>
+        </div>
+        <img src="dl-files/Image1.png" alt="">
     </header>
 
-    <nav>
-        <a href="https://github.com/PoloBrn/portfolio/raw/main/CV%20Paul%20Br%C3%A9on.pdf">Mon CV</a>
+    <nav class="Links">
+        <a href="dl-files/CV Paul Bréon.pdf">Mon CV</a>
+        <a href="https://www.linkedin.com/in/paul-br%C3%A9on-b7a083257/">Linkedin</a>
+        <a href="">Projet jeu vidéo 2D / 3D <span class="italique">(environ 5Go)</span></a>
     </nav>
-    <div>
-
+    <nav class="Deplacement">
+        <a href="">Qui suis-je ?</a>
+    </nav>
+    <div class="QuiSuisJe">
+        <h1>Qui suis-je ?</h1>
+        <p>Je m'appelle Paul Bréon je suis actuellement étudiant <span class="italique"> au CESI école d'ingénieur</span>, lors de mon cursus j'ai acquis de nombreuses compétences que ce soit en gestion de projet tout comme dans divers langages de programmation.</p>
+        <p>Grand fan de musique, je suis percussionniste, batteur mais aussi chef d'orchestre dans <span class="italique"> l'Orchestre Junior de Criquetot L'Esneval</span> ainsi que référent percussionnistes dans <span class="italique">l'Orchestre Harmonique de Criquetot L'Esneval</span> .</p>
+    </div>
+    <div class="Compeences">
+        <h1>Compétences</h1>
+        <p></p>
+        <p></p>
     </div>
 </body>
 
