--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Je m'appelle Paul Bréon je suis actuellement étudiant <span class="italique"> au CESI école d'ingénieur</span>, lors de mon cursus j'ai acquis de nombreuses compétences que ce soit en gestion de projet tout comme dans divers langages de programmation.</p>
         <p>Grand fan de musique, je suis percussionniste, batteur mais aussi chef d'orchestre dans <span class="italique"> l'Orchestre Junior de Criquetot L'Esneval</span> ainsi que référent percussionnistes dans <span class="italique">l'Orchestre Harmonique de Criquetot L'Esneval</span> .</p>
     </div>
-    <div class="Compeences">
+    <div class="Competences">
         <h1>Compétences</h1>
         <p></p>
         <p></p>
