--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title> WS Facture </title>
+    <title> Paul Bréon </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 </head>
