--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </nav>
     <nav class="Deplacement">
         <a href="">Qui suis-je ?</a>
+        <a href="">Compétences</a>
+        <a href=""></a>
     </nav>
     <div class="QuiSuisJe">
         <h1>Qui suis-je ?</h1>
@@ -31,6 +33,11 @@
     </div>
     <div class="Competences">
         <h1>Compétences</h1>
+        <p></p>
+        <p></p>
+    </div>
+    <div class="">
+        <h1></h1>
         <p></p>
         <p></p>
     </div>
