--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="Deplacement">
         <a href="">Qui suis-je ?</a>
         <a href="">Compétences</a>
-        <a href=""></a>
+        <a href="">Formation</a>
     </nav>
     <div class="QuiSuisJe">
         <h1>Qui suis-je ?</h1>
@@ -36,10 +36,39 @@
         <p></p>
         <p></p>
     </div>
-    <div class="">
-        <h1></h1>
-        <p></p>
-        <p></p>
+    <div class="Formation">
+        <h1>Formation</h1>
+        <h2>CESI</h2>
+        <h2>2ème année</h2>
+        <h3>Électronique et composants</h3>
+        <p>Lors de ce projet, j'ai appris tout d'abord à utilisé l'OS <strong>Linux</strong>, plus précisement BodyLinux avec l'utilisation du terminal sous Linux. Ensuite j'ai travaillé sur la priorisation du courant électrique avec divers composants</p>
+        <p>ainsi que leur gestion ainsi que leur configurations via terminal et PlatformIO.</p>
+        <h3>Programmation Orientée Objet</h3>
+        <p>Lors de ce projet, j'ai appris le fonctionnement en <strong>C++</strong> de classes et de leurs attributs avec la notion d'héritage.</p>
+        <h3>Réseau</h3>
+        <p>Lors de ce projet</p>
+        <h3>Développement Web</h3>
+        <p>Lors de ce projet</p>
+        <h2>1ère année</h2>
+        <h3>Électronique</h3>
+        <p>Lors de ce projet</p>
+        <h3>Ondes et signaux</h3>
+        <p>Lors de ce projet</p>
+        <h3>Mécanique</h3>
+        <p>Lors de ce projet</p>
+        <h3>Industrie</h3>
+        <p>Lors de ce projet</p>
+        <h3>Base de donnée</h3>
+        <p>Lors de ce projet</p>
+        <h3>BTP</h3>
+        <p>Lors de ce projet</p>
+    </div>
+    <div class="ExperiencesPro">
+        <h1>Expériences Professionnelle</h1>
+        <ul>
+            <li>Intermarché</li>
+            <li>Stage</li>
+        </ul>
     </div>
 </body>
 
