--- a/index.html
+++ b/index.html
@@ -33,8 +33,25 @@
     </div>
     <div class="Competences">
         <h1>Compétences</h1>
-        <p></p>
-        <p></p>
+        <ul>
+            <li>C#</li>
+            <li>Unity</li>
+            <li>C++</li>
+            <li>C Arduino</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Python</li>
+            <li>SQL</li>
+        </ul>
+    </div>
+    <div class="ExperiencesPro">
+        <h1>Expériences Professionnelle</h1>
+        <ul>
+            <li>Stage de 4mois du 3 avril 2023 au 28 juillet 2023 au Laboratoire de recherche du CESI dans le but de concevoir un outils pédagogique en réalité virtuelle pour les 4ème années informatique.</li>
+            <li>Travail Intermarché juillet-août 2022, découverte industrie agroalimentaire</li>
+            <li>Stage ORTEC environnement 2019, découverte métier ingénieur en cybersécurité.</li>
+            <li>Stage Renault 2018, découverte métiers production.</li>
+        </ul>
     </div>
     <div class="Formation">
         <h1>Formation</h1>
@@ -44,7 +61,7 @@
         <p>Lors de ce projet, j'ai appris tout d'abord à utilisé l'OS <strong>Linux</strong>, plus précisement BodyLinux avec l'utilisation du terminal sous Linux. Ensuite j'ai travaillé sur la priorisation du courant électrique avec divers composants</p>
         <p>ainsi que leur gestion ainsi que leur configurations via terminal et PlatformIO.</p>
         <h3>Programmation Orientée Objet</h3>
-        <p>Lors de ce projet, j'ai appris le fonctionnement en <strong>C++</strong> de classes et de leurs attributs avec la notion d'héritage.</p>
+        <p>Lors de ce projet, j'ai appris le fonctionnement en <strong>C++</strong> de classes et de leurs attributs avec la notion d'héritage. Ensuite j'ai travaillé sur le <strong>C++/CLI</strong> qui permet la création d'interface graphique.</p>
         <h3>Réseau</h3>
         <p>Lors de ce projet</p>
         <h3>Développement Web</h3>
@@ -62,13 +79,6 @@
         <p>Lors de ce projet</p>
         <h3>BTP</h3>
         <p>Lors de ce projet</p>
-    </div>
-    <div class="ExperiencesPro">
-        <h1>Expériences Professionnelle</h1>
-        <ul>
-            <li>Intermarché</li>
-            <li>Stage</li>
-        </ul>
     </div>
 </body>
 
