Bar Nav incroyable

--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
         <img src="dl-files/Image1.png" alt="">
     </header>
 
-    <nav class="Links">
-        <a href="dl-files/CV Paul Bréon.pdf">Mon CV</a>
-        <a href="https://www.linkedin.com/in/paul-br%C3%A9on-b7a083257/">Linkedin</a>
-        <a href="">Projet jeu vidéo 2D / 3D <span class="italique">(environ 5Go)</span></a>
-    </nav>
-    <nav class="Deplacement">
-        <a href="">Qui suis-je ?</a>
-        <a href="">Compétences</a>
-        <a href="">Formation</a>
+    <nav>
+        <div class="Links">
+            <a href="dl-files/CV Paul Bréon.pdf">Mon CV</a>
+            <a href="https://www.linkedin.com/in/paul-br%C3%A9on-b7a083257/">Linkedin</a>
+            <a href="">Projet jeu vidéo 2D / 3D <span class="italique">(environ 5Go)</span></a>
+            <a href="">Qui suis-je ?</a>
+            <a href="">Compétences</a>
+            <a href="">Formation</a>
+        </div>
     </nav>
     <div class="QuiSuisJe">
         <h1>Qui suis-je ?</h1>
-        <p>Je m'appelle Paul Bréon je suis actuellement étudiant <span class="italique"> au CESI école d'ingénieur</span>, lors de mon cursus j'ai acquis de nombreuses compétences que ce soit en gestion de projet tout comme dans divers langages de programmation.</p>
-        <p>Grand fan de musique, je suis percussionniste, batteur mais aussi chef d'orchestre dans <span class="italique"> l'Orchestre Junior de Criquetot L'Esneval</span> ainsi que référent percussionnistes dans <span class="italique">l'Orchestre Harmonique de Criquetot L'Esneval</span> .</p>
+        <p>Je m'appelle Paul Bréon je suis actuellement étudiant <span class="italique"> au CESI école
+                d'ingénieur</span>, lors de mon cursus j'ai acquis de nombreuses compétences que ce soit en gestion de
+            projet tout comme dans divers langages de programmation.</p>
+        <p>Grand fan de musique, je suis percussionniste, batteur mais aussi chef d'orchestre dans <span
+                class="italique"> l'Orchestre Junior de Criquetot L'Esneval</span> ainsi que référent percussionnistes
+            dans <span class="italique">l'Orchestre Harmonique de Criquetot L'Esneval</span> .</p>
     </div>
     <div class="Competences">
         <h1>Compétences</h1>
@@ -47,7 +51,8 @@
     <div class="ExperiencesPro">
         <h1>Expériences Professionnelle</h1>
         <ul>
-            <li>Stage de 4mois du 3 avril 2023 au 28 juillet 2023 au Laboratoire de recherche du CESI dans le but de concevoir un outils pédagogique en réalité virtuelle pour les 4ème années informatique.</li>
+            <li>Stage de 4mois du 3 avril 2023 au 28 juillet 2023 au Laboratoire de recherche du CESI dans le but de
+                concevoir un outils pédagogique en réalité virtuelle pour les 4ème années informatique.</li>
             <li>Travail Intermarché juillet-août 2022, découverte industrie agroalimentaire</li>
             <li>Stage ORTEC environnement 2019, découverte métier ingénieur en cybersécurité.</li>
             <li>Stage Renault 2018, découverte métiers production.</li>
@@ -58,10 +63,14 @@
         <h2>CESI</h2>
         <h2>2ème année</h2>
         <h3>Électronique et composants</h3>
-        <p>Lors de ce projet, j'ai appris tout d'abord à utilisé l'OS <strong>Linux</strong>, plus précisement BodyLinux avec l'utilisation du terminal sous Linux. Ensuite j'ai travaillé sur la priorisation du courant électrique avec divers composants</p>
+        <p>Lors de ce projet, j'ai appris tout d'abord à utilisé l'OS <strong>Linux</strong>, plus précisement BodyLinux
+            avec l'utilisation du terminal sous Linux. Ensuite j'ai travaillé sur la priorisation du courant électrique
+            avec divers composants</p>
         <p>ainsi que leur gestion ainsi que leur configurations via terminal et PlatformIO.</p>
         <h3>Programmation Orientée Objet</h3>
-        <p>Lors de ce projet, j'ai appris le fonctionnement en <strong>C++</strong> de classes et de leurs attributs avec la notion d'héritage. Ensuite j'ai travaillé sur le <strong>C++/CLI</strong> qui permet la création d'interface graphique.</p>
+        <p>Lors de ce projet, j'ai appris le fonctionnement en <strong>C++</strong> de classes et de leurs attributs
+            avec la notion d'héritage. Ensuite j'ai travaillé sur le <strong>C++/CLI</strong> qui permet la création
+            d'interface graphique.</p>
         <h3>Réseau</h3>
         <p>Lors de ce projet</p>
         <h3>Développement Web</h3>
