--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
             <a href="dl-files/CV Paul Bréon.pdf">Mon CV</a>
             <a href="https://www.linkedin.com/in/paul-br%C3%A9on-b7a083257/">Linkedin</a>
             <a href="">Projet jeu vidéo 2D / 3D <span class="italique">(environ 5Go)</span></a>
-            <a href="">Qui suis-je ?</a>
-            <a href="">Compétences</a>
-            <a href="">Formation</a>
+            <a href="#QuiSuisJe">Qui suis-je ?</a>
+            <a href="#ExperiencesPro">Expériences Professionnelle</a>
+            <a href="#Formation">Formation</a>
+            <a href="#CL">Compétences & Langues</a>
         </div>
     </nav>
-    <div class="QuiSuisJe">
+    <div class="QuiSuisJe" id="QuiSuisJe">
         <h1>Qui suis-je ?</h1>
         <p>Je m'appelle Paul Bréon je suis actuellement étudiant <span class="italique"> au CESI école
                 d'ingénieur</span>, lors de mon cursus j'ai acquis de nombreuses compétences que ce soit en gestion de
@@ -35,59 +36,88 @@
                 class="italique"> l'Orchestre Junior de Criquetot L'Esneval</span> ainsi que référent percussionnistes
             dans <span class="italique">l'Orchestre Harmonique de Criquetot L'Esneval</span> .</p>
     </div>
-    <div class="Competences">
-        <h1>Compétences</h1>
-        <ul>
-            <li>C#</li>
-            <li>Unity</li>
-            <li>C++</li>
-            <li>C Arduino</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Python</li>
-            <li>SQL</li>
-        </ul>
-    </div>
-    <div class="ExperiencesPro">
+    <div class="ExperiencesPro" id="ExperiencesPro">
         <h1>Expériences Professionnelle</h1>
-        <ul>
-            <li>Stage de 4mois du 3 avril 2023 au 28 juillet 2023 au Laboratoire de recherche du CESI dans le but de
-                concevoir un outils pédagogique en réalité virtuelle pour les 4ème années informatique.</li>
-            <li>Travail Intermarché juillet-août 2022, découverte industrie agroalimentaire</li>
-            <li>Stage ORTEC environnement 2019, découverte métier ingénieur en cybersécurité.</li>
-            <li>Stage Renault 2018, découverte métiers production.</li>
-        </ul>
+            <p>Stage de 4mois du 3 avril 2023 au 28 juillet 2023 au Laboratoire de recherche du CESI dans le but de
+                concevoir un outils pédagogique en réalité virtuelle pour les 4ème années informatique.</p>
+            <p>Travail Intermarché juillet-août 2022, découverte industrie agroalimentaire</p>
+            <p>Stage ORTEC environnement 2019, découverte métier ingénieur en cybersécurité.</p>
+            <p>Stage Renault 2018, découverte métiers production.</p>
     </div>
-    <div class="Formation">
+    <div class="Formation" id="Formation">
         <h1>Formation</h1>
         <h2>CESI</h2>
-        <h2>2ème année</h2>
-        <h3>Électronique et composants</h3>
-        <p>Lors de ce projet, j'ai appris tout d'abord à utilisé l'OS <strong>Linux</strong>, plus précisement BodyLinux
-            avec l'utilisation du terminal sous Linux. Ensuite j'ai travaillé sur la priorisation du courant électrique
-            avec divers composants</p>
-        <p>ainsi que leur gestion ainsi que leur configurations via terminal et PlatformIO.</p>
-        <h3>Programmation Orientée Objet</h3>
-        <p>Lors de ce projet, j'ai appris le fonctionnement en <strong>C++</strong> de classes et de leurs attributs
-            avec la notion d'héritage. Ensuite j'ai travaillé sur le <strong>C++/CLI</strong> qui permet la création
-            d'interface graphique.</p>
-        <h3>Réseau</h3>
-        <p>Lors de ce projet</p>
-        <h3>Développement Web</h3>
-        <p>Lors de ce projet</p>
-        <h2>1ère année</h2>
-        <h3>Électronique</h3>
-        <p>Lors de ce projet</p>
-        <h3>Ondes et signaux</h3>
-        <p>Lors de ce projet</p>
-        <h3>Mécanique</h3>
-        <p>Lors de ce projet</p>
-        <h3>Industrie</h3>
-        <p>Lors de ce projet</p>
-        <h3>Base de donnée</h3>
-        <p>Lors de ce projet</p>
-        <h3>BTP</h3>
-        <p>Lors de ce projet</p>
+        <div class="CESI">
+            <div class="2A">
+                <h2>2ème année</h2>
+                <h3>Électronique et composants</h3>
+                <p>Lors de ce projet, j'ai appris tout d'abord à utilisé l'OS <strong>Linux</strong>, plus précisement
+                    BodyLinux
+                    avec l'utilisation du terminal sous Linux. Ensuite j'ai travaillé sur la priorisation du courant
+                    électrique
+                    avec divers composants</p>
+                <p>ainsi que leur gestion ainsi que leur configurations via terminal et PlatformIO.</p>
+                <h3>Programmation Orientée Objet</h3>
+                <p>Lors de ce projet, j'ai appris le fonctionnement en <strong>C++</strong> de classes et de leurs
+                    attributs
+                    avec la notion d'héritage. Ensuite j'ai travaillé sur le <strong>C++/CLI</strong> qui permet la
+                    création
+                    d'interface graphique.</p>
+                <h3>Réseau</h3>
+                <p>Lors de ce projet</p>
+                <h3>Développement Web</h3>
+                <p>Lors de ce projet</p>
+            </div>
+            <div class="1A">
+                <h2>1ère année</h2>
+                <h3>Électronique</h3>
+                <p>Lors de ce projet</p>
+                <h3>Ondes et signaux</h3>
+                <p>Lors de ce projet</p>
+                <h3>Mécanique</h3>
+                <p>Lors de ce projet</p>
+                <h3>Industrie</h3>
+                <p>Lors de ce projet</p>
+                <h3>Base de donnée</h3>
+                <p>Lors de ce projet</p>
+                <h3>BTP</h3>
+                <p>Lors de ce projet</p>
+            </div>
+            <div class="Lycee">
+                <h2>Lycée</h2>
+
+            </div>
+        </div>
+    </div>
+    <div class="CL" id="CL">
+        <div class="Competences">
+            <h1>Compétences</h1>
+            <ul>
+                <li>C#</li>
+                <li>Unity</li>
+                <li>C++</li>
+                <li>C Arduino</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Python</li>
+                <li>SQL</li>
+            </ul>
+        </div>
+        <div class="Langues">
+            <h1>Langues</h1>
+            <ul>
+                <li>Anglais</li>
+                <li>Français</li>
+                <li>Espagnol</li>
+                <li>Allemand</li>
+            </ul>
+        </div>
+    </div>
+    <div class="Coordonnees">
+    <h1> Mes coordonnées</h1>
+        <p> Téléphone : 07 78 32 07 54</p>
+        <p>mail : paul.breon@viacesi.fr</p>
+        <p>Réside à : 34 Rue Saint-Maur, Rouen 76 000</p>
     </div>
 </body>
 
