--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#ExperiencesPro">Expériences Professionnelle</a>
             <a href="#Formation">Formation</a>
             <a href="#CL">Compétences & Langues</a>
+            <a href="#Coordonnees">Coordonnées</a>
         </div>
     </nav>
     <div class="QuiSuisJe" id="QuiSuisJe">
@@ -38,25 +39,25 @@
     </div>
     <div class="ExperiencesPro" id="ExperiencesPro">
         <h1>Expériences Professionnelle</h1>
-            <p>Stage de 4mois du 3 avril 2023 au 28 juillet 2023 au Laboratoire de recherche du CESI dans le but de
-                concevoir un outils pédagogique en réalité virtuelle pour les 4ème années informatique.</p>
-            <p>Travail Intermarché juillet-août 2022, découverte industrie agroalimentaire</p>
-            <p>Stage ORTEC environnement 2019, découverte métier ingénieur en cybersécurité.</p>
-            <p>Stage Renault 2018, découverte métiers production.</p>
+        <p>Stage de 4mois du 3 avril 2023 au 28 juillet 2023 au Laboratoire de recherche du CESI dans le but de
+            concevoir un outils pédagogique en réalité virtuelle pour les 4ème années informatique.</p>
+        <p>Travail Intermarché juillet-août 2022, découverte industrie agroalimentaire</p>
+        <p>Stage ORTEC environnement 2019, découverte métier ingénieur en cybersécurité.</p>
+        <p>Stage Renault 2018, découverte métiers production.</p>
     </div>
     <div class="Formation" id="Formation">
         <h1>Formation</h1>
         <h2>CESI</h2>
         <div class="CESI">
-            <div class="2A">
+            <div class="DEUA">
                 <h2>2ème année</h2>
                 <h3>Électronique et composants</h3>
                 <p>Lors de ce projet, j'ai appris tout d'abord à utilisé l'OS <strong>Linux</strong>, plus précisement
                     BodyLinux
                     avec l'utilisation du terminal sous Linux. Ensuite j'ai travaillé sur la priorisation du courant
                     électrique
-                    avec divers composants</p>
-                <p>ainsi que leur gestion ainsi que leur configurations via terminal et PlatformIO.</p>
+                    avec divers composants, leur gestion ainsi que leur configurations via terminal et
+                    PlatformIO.</p>
                 <h3>Programmation Orientée Objet</h3>
                 <p>Lors de ce projet, j'ai appris le fonctionnement en <strong>C++</strong> de classes et de leurs
                     attributs
@@ -68,7 +69,7 @@
                 <h3>Développement Web</h3>
                 <p>Lors de ce projet</p>
             </div>
-            <div class="1A">
+            <div class="UNA">
                 <h2>1ère année</h2>
                 <h3>Électronique</h3>
                 <p>Lors de ce projet</p>
@@ -85,7 +86,18 @@
             </div>
             <div class="Lycee">
                 <h2>Lycée</h2>
-
+                <ul>
+                    <p>Terminale avec spécialité :</p>
+                    <li>Mathématiques</li>
+                    <li>Physique-Chimie</li>
+                    <li>Option Mathématiques Expert</li>
+                </ul>
+                <ul>
+                    <p>Première avec spécialité :</p>
+                    <li>Mathématiques</li>
+                    <li>Physique-Chimie</li>
+                    <li>Sciences Vie de la Terre</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -113,8 +125,8 @@
             </ul>
         </div>
     </div>
-    <div class="Coordonnees">
-    <h1> Mes coordonnées</h1>
+    <div class="Coordonnees" id="Coordonnees">
+        <h1> Mes coordonnées</h1>
         <p> Téléphone : 07 78 32 07 54</p>
         <p>mail : paul.breon@viacesi.fr</p>
         <p>Réside à : 34 Rue Saint-Maur, Rouen 76 000</p>
