--- a/index.html
+++ b/index.html
@@ -65,24 +65,33 @@
                     création
                     d'interface graphique.</p>
                 <h3>Réseau</h3>
-                <p>Lors de ce projet</p>
+                <p>Lors de ce projet, j'ai vu les notions de réseau de base en gérant l'adressage d'une maquette en IPV4
+                    et IPV6.</p>
                 <h3>Développement Web</h3>
-                <p>Lors de ce projet</p>
+                <p>Lors de ce projet, j'ai dévouvert le fonctionnement du web qui est le plus grand réseau du monde, les
+                    différents langages associés et il m'a permis de créer ce site.</p>
             </div>
             <div class="UNA">
                 <h2>1ère année</h2>
                 <h3>Électronique</h3>
-                <p>Lors de ce projet</p>
+                <p>Lors de ce projet, j'ai eu une première approche sur ce qu'est l'électronique la gestion de
+                    composants à travers les transistors et les resistances.</p>
                 <h3>Ondes et signaux</h3>
-                <p>Lors de ce projet</p>
+                <p>Lors de ce projet, j'ai revu le fonctionnement des ondes électromagnétiques ainsi que les ondes dans
+                    leur globalités afin de comprendre comment deux ordinateurs communiquent entre eux ainsi que les
+                    signaux.</p>
                 <h3>Mécanique</h3>
-                <p>Lors de ce projet</p>
+                <p>Lors de ce projet, j'ai revnu les notions de mouvement avec leurs équations ou encore la première et
+                    la deuxième loi de Newton tout en impliquant un changement de repère avec les repères orthogonaux et
+                    de Frenet.</p>
                 <h3>Industrie</h3>
-                <p>Lors de ce projet</p>
+                <p>Lors de ce projet, </p>
                 <h3>Base de donnée</h3>
-                <p>Lors de ce projet</p>
+                <p>Lors de ce projet, j'ai eu une première approche de ce qu'est une base de donnée, son fonctionnement
+                    et sa gestion ainsi que diverses normes associés tel que le faite qu'il ne doit jamais y avoir deux
+                    fois la même information qui se répète.</p>
                 <h3>BTP</h3>
-                <p>Lors de ce projet</p>
+                <p>Lors de ce projet, </p>
             </div>
             <div class="Lycee">
                 <h2>Lycée</h2>
@@ -122,6 +131,15 @@
                 <li>Français</li>
                 <li>Espagnol</li>
                 <li>Allemand</li>
+            </ul>
+        </div>
+        <div class="Logiciels" id="Logiciels">
+            <h1>Logiciels</h1>
+            <ul>
+                <li>Visual Studio</li>
+                <li>Visual Studio Code</li>
+                <li>Pack Office</li>
+                <li></li>
             </ul>
         </div>
     </div>
