--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
     <header class="header">
-        <div class="Titre">
+        <main class="Titre">
             <h1>Paul Bréon</h1>
             <p>Bienvenue dans ce site internet créer par mes soins</p>
-        </div>
+        </main>
         <img src="dl-files/Image1.png" alt="">
     </header>
 
@@ -24,7 +24,7 @@
             <a href="#QuiSuisJe">Qui suis-je ?</a>
             <a href="#ExperiencesPro">Expériences Professionnelle</a>
             <a href="#Formation">Formation</a>
-            <a href="#CL">Compétences & Langues</a>
+            <a href="#CL">Compétences, Langues & Logiciels</a>
             <a href="#Coordonnees">Coordonnées</a>
         </div>
     </nav>
@@ -47,10 +47,9 @@
     </div>
     <div class="Formation" id="Formation">
         <h1>Formation</h1>
-        <h2>CESI</h2>
         <div class="CESI">
             <div class="DEUA">
-                <h2>2ème année</h2>
+                <h2>CESI 2ème année</h2>
                 <h3>Électronique et composants</h3>
                 <p>Lors de ce projet, j'ai appris tout d'abord à utilisé l'OS <strong>Linux</strong>, plus précisement
                     BodyLinux
@@ -72,7 +71,7 @@
                     différents langages associés et il m'a permis de créer ce site.</p>
             </div>
             <div class="UNA">
-                <h2>1ère année</h2>
+                <h2>CESI 1ère année</h2>
                 <h3>Électronique</h3>
                 <p>Lors de ce projet, j'ai eu une première approche sur ce qu'est l'électronique la gestion de
                     composants à travers les transistors et les resistances.</p>
@@ -85,13 +84,15 @@
                     la deuxième loi de Newton tout en impliquant un changement de repère avec les repères orthogonaux et
                     de Frenet.</p>
                 <h3>Industrie</h3>
-                <p>Lors de ce projet, </p>
+                <p>Lors de ce projet, j'ai étudié comment se gère une chaîne de production, comment gérer les deadlines
+                    de temps donc énormément de gestion de projet.</p>
                 <h3>Base de donnée</h3>
                 <p>Lors de ce projet, j'ai eu une première approche de ce qu'est une base de donnée, son fonctionnement
                     et sa gestion ainsi que diverses normes associés tel que le faite qu'il ne doit jamais y avoir deux
                     fois la même information qui se répète.</p>
                 <h3>BTP</h3>
-                <p>Lors de ce projet, </p>
+                <p>Lors de ce projet, j'ai étudié les équations de déformées de poutres ainsi que des notions de
+                    thermodynamique.</p>
             </div>
             <div class="Lycee">
                 <h2>Lycée</h2>
@@ -139,7 +140,9 @@
                 <li>Visual Studio</li>
                 <li>Visual Studio Code</li>
                 <li>Pack Office</li>
-                <li></li>
+                <li>Unity</li>
+                <li>Notion</li>
+                <li>Github</li>
             </ul>
         </div>
     </div>
